# ClickAndPick

./: .gitignore  ARCHITECTURE_REVIEW.md  AUDIT.md  TESTING.md
.claude/: settings.local.json
app-onboarding-remix/: README.md
app-onboarding-remix/project/: .image-slots.state.json  .thumbnail  ביחד.html  פריט.html  פריטים.html
app-onboarding-remix/project/onboarding/: flow.css  flow.jsx  screens.jsx
app-onboarding-remix/project/scraps/: sketch-2026-06-07T18-19-56-kkn3jf.napkin
app-onboarding-remix/project/share/: items.css  together.css
client/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
client/example/: App.css  App.jsx  index.css
client/example/auth/: AuthContext.jsx  Login.css  Login.jsx  Register.css  Register.jsx  Step1Form.jsx  Step2Form.jsx
client/example/hooks/: useApi.js  useLocalStorage.js  useResource.js  useUsers.js
client/example/shared/: AddItem.jsx  DeleteItem.jsx  Edit.jsx  Header.css  Header.jsx  Layout.jsx  Navigation.css  Navigation.jsx  Search.jsx  UserInfo.css  UserInfo.jsx  useUserInfo.js
client/example/styles/: Components.css  ModernComponents.css
client/src/: App.jsx  index.css  main.jsx
client/src/components/: AdminInbox.jsx  AuthPanel.jsx  AvailabilityCalendar.css  Avatar.css  Avatar.jsx  BookingCard.css  BookingCard.jsx  CategoryManager.jsx  ConfirmDialog.css  ConfirmDialog.jsx  EditItemModal.css  EditItemModal.jsx  ErrorBoundary.jsx  FeedbackForm.jsx  Loader.css  Loader.jsx  LoanRequestModal.css  LoanRequestModal.jsx  Marquee.jsx  Marquee.module.css  OwnerItemCard.jsx  ProtectedRoute.jsx  ReviewModal.jsx  TgNavbar.jsx
client/src/config/: categories.js
client/src/context/: AuthContext.jsx  AuthProvider.jsx  CategoriesContext.jsx  CategoriesProvider.jsx
client/src/hooks/: useAdminDashboard.js  useApi.js  useAsyncAction.js  useAuthForm.js  useAuthLayout.js  useAvatarUpload.js  (+9 more)
database/: db.js  package-lock.json  package.json
database/models/: Booking.js  Category.js  Feedback.js  Item.js  Message.js  Review.js  User.js  index.js
database/seeds/: categories.js  migrateCategoriesHebrew.js  seed.js  spreadBookingDates.js
realtime-service-cpp/: CMakeLists.txt  main.cpp
server/: .env.example  app.js  index.js  jest.config.js  package-lock.json  package.json
server/config/: db.js
server/controllers/: adminController.js  authController.js  bookingsController.js  categoriesController.js  dashboardController.js  feedbackController.js  itemsController.js  messagesController.js  reviewsController.js  statsController.js  uploadsController.js
server/jobs/: cronJobs.js
server/middleware/: checkRole.js  upload.js  verifyToken.js
server/models/: Booking.js  Category.js  Feedback.js  Item.js  Review.js  User.js  index.js
server/routes/: admin.js  auth.js  bookings.js  categories.js  dashboard.js  feedback.js  items.js  messages.js  stats.js  uploads.js
server/scripts/: migrateTrustScores.js  patchExistingItemsLocation.js
server/seeds/: categories.js  seed.js  spreadBookingDates.js
server/services/: adminService.js  authService.js  bookingsService.js  categoriesService.js  emailService.js  feedbackService.js  itemsService.js  messagesService.js  reviewsService.js  statsService.js
server/tests/: auth.test.js  bookings.test.js  helpers.js  items.test.js  setup.js
server/utils/: asyncHandler.js  geo.js  geocode.js  logger.js  pagination.js
(+191 files in other folders)
